--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">Store Shopping List</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_add_store">Add Store</string>
+    <string name="ok">OK</string>
+    <string name="storename_hint">Store Name</string>
+    <string name="street_hint">Street Address</string>
+    <string name="city_hint">City</string>
+    <string name="state_hint">State</string>
+    <string name="addstore_text">Add Store</string>
+    <string name="actionbar_stores">Store Shopping Lists</string>
+
 </resources>
