Add ability to add shopping list items and take & save photos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
     <string name="actionbar_itemlist">Shopping List</string>
+    <string name="itemname_hint">Item Name</string>
+    <string name="additem_button">Add Item</string>
+    <string name="updateitem_button">Update Item</string>
+    <string name="actionbar_additem">Add Item</string>
+    <string name="actionbar_updateitem">Update Item</string>
 </resources>
