--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="updateitem_button">Update Item</string>
     <string name="actionbar_additem">Add Item</string>
     <string name="actionbar_updateitem">Update Item</string>
+    <string name="show_map">Show Map</string>
 </resources>
