Add a map fragmant with stores markers with item count

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="actionbar_additem">Add Item</string>
     <string name="actionbar_updateitem">Update Item</string>
     <string name="show_map">Show Map</string>
+    <string name="actionbar_map">Map</string>
 </resources>
